--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "gsap": "^3.9.1",
-    "react": "^17.0.2",
+    "react": "^16.11.0",
+    "react-dom": "^16.11.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "@dogstudio/highway": "^2.2.1",
+    "jquery": "^3.6.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -36,8 +40,6 @@
     ]
   },
   "devDependencies": {
-    "react-dom": "^17.0.2",
-    "react-router-dom": "^6.2.2",
     "sass": "^1.49.9"
   }
 }
