--- a/package.json
+++ b/package.json
@@ -3,17 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@dogstudio/highway": "^2.2.1",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "gsap": "^3.9.1",
+    "jquery": "^3.6.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-mailchimp-form": "^1.0.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.4",
-    "@dogstudio/highway": "^2.2.1",
-    "jquery": "^3.6.0"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
