--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "jquery": "^3.6.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-helmet": "^6.1.0",
     "react-mailchimp-form": "^1.0.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "5.0.0",
